[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/gamemode/state/GameOver.gd" type="Script" id=1]
[ext_resource path="res://src/entity/char/Person.tscn" type="PackedScene" id=2]
[ext_resource path="res://modules/Debugging/DebugNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gamemode/Tennis.gd" type="Script" id=4]
[ext_resource path="res://modules/Pause/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://modules/Juice/Camera/Shake.tscn" type="PackedScene" id=6]
[ext_resource path="res://modules/StateMachine/StateMachine.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/gamemode/util/ScoreDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/gamemode/util/Field.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sfx/ballFloor.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/ballRacket.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/pickupCoin.wav" type="AudioStream" id=13]
[ext_resource path="res://src/gamemode/state/Playing.gd" type="Script" id=14]
[ext_resource path="res://assets/sfx/winMatch.wav" type="AudioStream" id=15]
[ext_resource path="res://src/gamemode/util/Overlay.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/gamemode/state/Starting.gd" type="Script" id=18]
[ext_resource path="res://src/entity/ball/Bottle.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/gamemode/Highlight.gd" type="Script" id=20]
[ext_resource path="res://src/gamemode/state/Point.gd" type="Script" id=21]
[ext_resource path="res://assets/font/Last Spaceship.ttf" type="DynamicFontData" id=22]

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Char1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "blink_char1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Char1:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "blink_char2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Char2:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char1:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../Game/Person1:attack_strength_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Game/Person2:attack_strength_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "increasing_strength"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("../../Game/Person1:attack_strength_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Game/Person2:attack_strength_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0.243137, 0.215686, 0.360784, 1 )
use_mipmaps = true
extra_spacing_top = -4
extra_spacing_bottom = -4
extra_spacing_space = 4
font_data = ExtResource( 22 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StateMachine/Gameover/Overlay/Gameover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "gameover"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StateMachine/Gameover/Overlay/Gameover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Badmington" type="Node2D"]
script = ExtResource( 4 )
ball_scene = ExtResource( 19 )
ball_kicks_to_fail = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -76 )
current = true

[node name="Shake" parent="Camera2D" instance=ExtResource( 6 )]
camera_path = NodePath("..")
default_time = 0.1

[node name="ScoreDisplay" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -163 )

[node name="Game" type="Node2D" parent="."]

[node name="Field" parent="Game" instance=ExtResource( 9 )]

[node name="Person1" parent="Game" instance=ExtResource( 2 )]
position = Vector2( -162, -20 )

[node name="Person2" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 158, -20 )
opposite_side = true
action_prefix = "p2_"

[node name="Highlight" type="HBoxContainer" parent="."]
margin_left = -199.0
margin_top = -7.0
margin_right = 201.0
margin_bottom = 44.0
alignment = 1
script = ExtResource( 20 )

[node name="Char1" type="ColorRect" parent="Highlight"]
margin_right = 198.0
margin_bottom = 51.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="Char2" type="ColorRect" parent="Highlight"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 51.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Highlight"]
anims/RESET = SubResource( 13 )
anims/blink_char1 = SubResource( 14 )
anims/blink_char2 = SubResource( 15 )

[node name="DebugNode" parent="." instance=ExtResource( 3 )]
margin_left = -193.0
margin_top = -189.0
margin_right = -193.0
margin_bottom = -189.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="StateLabel" type="Label" parent="DebugNode"]
margin_right = 95.0
margin_bottom = 14.0
text = "state: Playingw"
uppercase = true

[node name="FocusedLabel" type="Label" parent="DebugNode"]
margin_top = 16.0
margin_right = 93.0
margin_bottom = 30.0
text = "focused: char1"
uppercase = true

[node name="KicksLabel" type="Label" parent="DebugNode"]
margin_top = 32.0
margin_right = 93.0
margin_bottom = 46.0
text = "kicks: 0"
uppercase = true

[node name="PointsChar1Label" type="Label" parent="DebugNode"]
margin_top = 48.0
margin_right = 95.0
margin_bottom = 62.0
text = "points char1: 0"
uppercase = true

[node name="PointsChar2Label" type="Label" parent="DebugNode"]
margin_top = 64.0
margin_right = 95.0
margin_bottom = 78.0
text = "points char2: 0"
uppercase = true

[node name="Pause" parent="." instance=ExtResource( 5 )]

[node name="Overlay" parent="." instance=ExtResource( 17 )]

[node name="Sound" type="Node" parent="."]

[node name="HitFloor" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 10 )
volume_db = -13.0

[node name="HitRacket" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 11 )
volume_db = -13.0

[node name="Score" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 13 )
volume_db = -13.0

[node name="Win" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 15 )
volume_db = -13.0

[node name="StateMachine" parent="." instance=ExtResource( 7 )]
initial_state = NodePath("Starting")

[node name="Starting" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Playing" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine/Playing"]
anims/RESET = SubResource( 10 )
anims/increasing_strength = SubResource( 9 )

[node name="Point" type="Node" parent="StateMachine"]
script = ExtResource( 21 )

[node name="Reset" type="Timer" parent="StateMachine/Point"]
one_shot = true

[node name="Gameover" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Overlay" type="CanvasLayer" parent="StateMachine/Gameover"]

[node name="Gameover" type="Control" parent="StateMachine/Gameover/Overlay"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.215686, 0.360784, 0.498039 )

[node name="Title" type="Label" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -53.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "PLAYER 1 WON!"
align = 1
valign = 2

[node name="Message" type="Label" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 35.0
text = "GAME OVER
PRESS R TO PLAY AGAIN"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine/Gameover"]
root_node = NodePath("../../..")
anims/RESET = SubResource( 7 )
anims/gameover = SubResource( 6 )

[connection signal="changed_field" from="Game/Field" to="StateMachine/Playing" method="_on_Field_changed_field"]
[connection signal="attack_executed" from="Game/Person1" to="." method="_on_Person_attack_executed"]
[connection signal="attack_executed" from="Game/Person2" to="." method="_on_Person_attack_executed"]
[connection signal="transition" from="StateMachine" to="." method="_on_StateMachine_transition"]
[connection signal="timeout" from="StateMachine/Point/Reset" to="StateMachine/Point" method="_on_Reset_timeout"]
[connection signal="animation_finished" from="StateMachine/Gameover/AnimationPlayer" to="StateMachine/Gameover" method="_on_AnimationPlayer_animation_finished"]
